z-index fixed

--- a/images/css/anim_slider.scss
+++ b/images/css/anim_slider.scss
@@ -38,6 +38,8 @@ body {
 		z-index: 2;
 		transform: translate(100%, 100%);
 		will-change: transform;
+		transition-property: transform;
+
 		&.active-slide {
 			transform: translate(0) scale(1);
 			z-index: 3;
